fix: missing .ruby-version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,8 @@
 name: Build and Publish Docker
 
 on:
+  pull_request:
+
   workflow_dispatch:
 
   push:
@@ -36,6 +38,6 @@ jobs:
         with:
           context: .
           target: ghcr
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
